# siegerpc

./: .gitignore  README.md  install.sh  pyproject.toml
scripts/: harden-wordpress-forms.sh
src/siegerpc/: __init__.py  cli.py  max_cli.py
