[project]
name = "siegerpc"
version = "0.1.0"
description = "Authorized WordPress xmlrpc.php load tester"
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "siegerpc contributors" }]
dependencies = ["requests>=2.31"]

[project.scripts]
siegerpc = "siegerpc.cli:main"
siegemax = "siegerpc.max_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
